Habit API: added endpoint to disable a habit
